# Data_Analysis_Final

Data_Analysis_Final_Project/: Makefile  README.md  pyproject.toml  requirements.txt
Data_Analysis_Final_Project/notebooks/: EDA.ipynb
Data_Analysis_Final_Project/notebooks/SQL_Queries/: 1_First_q.sql  2_Second_q.sql  3_Third_q.sql  4_Fourth_q.sql  5_Fifth_q.sql  6_Sixth_q.sql  7_Seventh_q.sql  8_Eighth_q.sql  9_Nineth_q.sql
Data_Analysis_Final_Project/reports/: PowerBi_Mohammadali_Jalili.pbix
